TestSuite/PascalABCTests/errors/err0159.pas
var a : integer;
begin
begin
var a : real;
end;
end.